fix alignment #2

--- a/resources/styles/skin.cali.notifications.less
+++ b/resources/styles/skin.cali.notifications.less
@@ -15,7 +15,7 @@
 
 #echoNotifications {
 	float: right;
-	padding-top: 0.3em;
+	padding-top: 0;
 	position: relative;
 	margin-right: 0.2em;
 	font-family: sans-serif;
